feat: prepare nft mint service for marketplace
